style.css
body {
    /* background-color: aqua; */
}



#stick-figure-container {
    position: relative;
    height: 175px;
    width: 100px;
    background-image: url('images/stick-figure.png');
    background-size: contain;
    background-repeat: no-repeat;
    padding-right: 30px;
    
}



#task-log {
    padding-right: 50px
}

#reward-list {
    vertical-align: top;
}

h3 {
    display: inline-block
}

#button-container {
    padding-right: 50px;
}

.task-button {
    width: 220px;
    border-radius: 6px;
    background-color: #008CBA;
    color: white;
}

.task-button:hover{
    background-color: #4CAF50;
    transition-duration: 0.4s

}

